# onehealth-model-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  dense_dummy.nc  documentation_refactoring.md  mkdocs.yml  pr_dummy.nc  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  dependabot.yml  docs.yml  main.yml
doc/source/: basic_design.md  conf.py  getting_started.md  heiplanet_models_api_doc.md  index.rst
docs/: api.md  basic_design.md  create_new_model.md  getting_started.md  index.md  jmodel.md  pmodel.md  using_existing_models.md
docs/models/: pmodel.md
docs/models/Pmodel/: pmodel.md
docs/sources/: config_jmodel.json  config_jmodel.yml  make_basic_usage_example.py  model_jmodel_python.ipynb
legacy_code/Abundace_calc_Matlab/: Absolute_R0_code.R  FE.m  README.txt  RK4.m  VC_albopictus_test_Model.R  aedes_albopictus_model.m  call_func.m  capacity.m  comparison_octave_python.m  dataset_population_dummy_octave.nc  dataset_rainfall_dummy_octave.nc  dataset_temperature_dummy_octave.nc  eqsys.m  eqsys_log.m  load_hpd.m  load_initial.m  load_latitude.m  load_rainfall.m  load_temp.m  load_temp1.m  load_temp2.m  model_run.m  mosq_birth.m  mosq_dev_e.m  mosq_dev_i.m  mosq_dev_j.m  mosq_dia_hatch.m  mosq_dia_lay.m  mosq_mort_a.m  mosq_mort_e.m  mosq_mort_j.m  mosq_surv_ed.m  rr_example.nc  tn_example.nc  tx_example.nc  untitled.m  water_hatch.m
legacy_code/Abundace_calc_Matlab/Further_code_for_R0/: Absolute_R0_code.R  Abundance_monthly_aggregation.R  VC_Calcul_&aggregation.R
legacy_code/Abundace_calc_Matlab/Some_test_data_stored_throughout/: Sandra_example_withEgDR_EmDr_JDR_not good_looking.nc  example_old_daylight_as_in_original_code.nc  example_par_agg_monthly_with_DTR.nc  example_updated_daylight_with_DTR.nc  example_with_Sandra_JDR,EmDR.nc  example_without_DTR.nc
model-backend/: read_geodata.py
model_backend/: pre_build_interpolator.py  r0_calculations.py  read_geodata.py  test_read_geodata.py  write_geodata.py
model_cards/: Aedes_albopictus_population_model_card.md  HeiPlanet_harmonized_model_cards.yaml  HeiPlanet_model_comparison.yaml  README.md  WNV-R0_model_card.md  WNV-R0_model_card.yaml
notebooks/: dask_test.ipynb  experiments_libraries.ipynb  model_jmodel_python.ipynb  model_python.ipynb  model_r.ipynb  ncdf_test.ipynb  template_notebooks.ipynb
refactor_utilitites/: create_aligned_datasets.py  create_dummy_datasets.py  create_dummy_initial_conditions_dummy.py
sandbox/: documentation_pratik_model_matlab.md
sandbox/edwin/: R0_pip_fun.py  commands_octave.md  create_dataset_certification.py  experiments_libraries.ipynb  instructions_installationR.md  interpolation.py  interpolators.py  pre_build_interpolator.py
sandbox/edwin/Pmodel/: Pmodel_initial.py  Pmodel_input.py  Pmodel_ode.py  Pmodel_params.py  Pmodel_rates_birth.py  Pmodel_rates_development.py  Pmodel_rates_mortality.py  experimentation.py  main.py
scripts/: model_R0_calculations.py  run_model_dummy.py
src/: script_Jmodel.py
src/heiplanet_models/: Jmodel.py  __init__.py  computation_graph.py  config_Jmodel.json  utils.py
src/heiplanet_models/Pmodel/: Pmodel_initial.py  Pmodel_input.py  Pmodel_ode.py  Pmodel_output.py  Pmodel_params.py  config.py  (+8 more)
src/model_backend/: Jmodel.py  Pmodel_ode.py  __init__.py  computation_graph.py  config_Jmodel.json  j_model.py  model_computation.py  utils.py
src/mypackage/: read_geodata.py  test_read_geodata.py
test/: computation_module.py  computation_test_data.csv  conftest.py  test_JModel.py  test_computation.py  test_j_model.py  test_r0.csv  test_r0_data.csv  test_read_geodata.py  test_utils.py
test/Pmodel/: test_Pmodel_initial.py  test_Pmodel_input.py  test_Pmodel_ode.py  test_Pmodel_rates_birth.py  test_Pmodel_rates_development.py  test_Pmodel_rates_mortality.py  test_all_functions.py  test_functions.py  test_initial.py
test/resources/: dense_dummy.nc  pr_dummy.nc  temperature_dummy.nc
test/utils_pmodel/: test_solar_calculations.py
tests/: test_read_geodata.py  test_write_geodata.py
(+25 files in other folders)
