[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model_backend"
license = { text = "MIT License" }
readme = "README.md"
description = "Model backend for OneHealth project"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
authors = [
  { name = "Scientific Software Center", email = "ssc@uni-heidelberg.de" },
]
version = "0.0.1"

dependencies = [
  "xarray[parallel]",
  "rioxarray",
  "netcdf4",
  "geopandas[all]",
  "matplotlib",
  "numpy",
  "dask",
]

[project.optional-dependencies]
viz = ["graphviz"]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "graphviz",   # we need this for the viz tests
]
docs = ["sphinx", "myst-parser", "sphinxcontrib-napoleon", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/ssciwr/onehealth-model-backend"
Issues = "https://github.com/ssciwr/onehealth-model-backend/issues"
